1573603529 | 99 files | M bin/version.txt,  M content/panorama/localization/tenfoot_schinese.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_schinese.txt,  M content/vrmonitor/translations/vrmonitor_errors_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_greek.txt,  M content/vrmonitor/translations/vrmonitor_korean.txt,  M content/vrmonitor/translations/vrmonitor_koreana.txt,  M content/vrmonitor/translations/vrmonitor_schinese.txt,  M content/vrmonitor/translations/vrmonitor_spanish.txt,  M content/vrmonitor/translations/vrmonitor_thai.txt,  M drivers/lighthouse/resources/webhelperoverlays.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_korean.j
https://steamdb.info/patchnotes/4382471/

--- a/content/panorama/localization/tenfoot_schinese.txt
+++ b/content/panorama/localization/tenfoot_schinese.txt
@@ -618,9 +618,9 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"正在等待…"
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"增强型 SteamVR 环境"
+"HomeAppCheck"	"SteamVR 家"
 "[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"新的“SteamVR 环境”支持更广阔的住宅空间、社交功能以及更多内容。选择参加以测试并在 SteamVR 论坛提供反馈。"
+"HomeAppDesc"	"SteamVR 家为您带来更丰富的居家体验、社交功能以及更多内容。"
 "[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"被禁言"
 "[english]MutedLabel"	"Muted"
