--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -780,7 +780,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Start_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_Start_UpperText"	" "
 "[english]FirmwareWizard_UpdateBasestation_Start_UpperText"	""
-"FirmwareWizard_UpdateBasestation_Start_MiddleText"	"1. Ontkoppel je basisstation en haal deze van de stroom af - let op dat je niet per ongeluk op de kanaalknop drukt terwijl je het basisstation ontkoppelt.\n\n2. Gebruik een micro-USB-kabel en verbind het basisstation met een USB-poort van je computer. Je kunt dezelfde kabel gebruiken als die je voor het opladen van je controllers gebruikt.\n\n3. Verbind je basisstation weer met de stroom terwijl je de kanaalknop aan de achterkant van het basisstation ingedrukt houdt.\n"
+"FirmwareWizard_UpdateBasestation_Start_MiddleText"	"1. Haal je basisstation van de muurbevestiging af en verwijder de kabels.\n\n2. Gebruik een micro-USB-kabel en verbind het basisstation met een USB-poort van je computer. Je kunt dezelfde kabel gebruiken als die je voor het opladen van je controllers gebruikt.\n\n3. Verbind je basisstation weer met de stroom terwijl je de kanaalknop aan de achterkant van het basisstation ingedrukt houdt.\n"
 "[english]FirmwareWizard_UpdateBasestation_Start_MiddleText"	"1. Unmount and unplug your base station.\n\n2. Use a micro-USB cable to plug the base station into a USB port on your computer. You can use the same cable that is used to charge your controllers.\n\n3. While holding down the channel button on the back of the base station, plug in your base station's power cord."
 "FirmwareWizard_UpdateBasestation_Start_LowerText"	"4. De update start automatisch als je basisstation wordt gedetecteerd. Je mag de kanaalknop dan loslaten."
 "[english]FirmwareWizard_UpdateBasestation_Start_LowerText"	"4. The update will start automatically once your base station is detected and you may release the channel button."
@@ -1650,6 +1650,8 @@
 "[english]PlaylistEditor_Detail_NothingSet_Text"	"Nothing set."
 "PlaylistEditor_Detail_PrerollDuration_Label"	"Voorvertoning looptijd:"
 "[english]PlaylistEditor_Detail_PrerollDuration_Label"	"Preroll Duration:"
+"PlaylistEditor_Detail_PostrollDuration_Label"	"Duur van post-roll:"
+"[english]PlaylistEditor_Detail_PostrollDuration_Label"	"Postroll Duration:"
 "PlaylistEditor_Detail_AudioVolume_Label"	"Audiovolume:"
 "[english]PlaylistEditor_Detail_AudioVolume_Label"	"Audio Volume:"
 "PlaylistEditor_Detail_AudioVolumeInPercent_Label"	" in % "
@@ -1710,6 +1712,10 @@
 "[english]PlaylistEditor_SelectExecutable_FileSelector"	"Select Executable Path"
 "PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Werkmap selecteren"
 "[english]PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Select Working Directory"
+"PlaylistEditor_SelectPrerollPlacecard_FileSelector"	"Naamkaart van pre-roll selecteren"
+"[english]PlaylistEditor_SelectPrerollPlacecard_FileSelector"	"Select Preroll Placecard"
+"PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Afbeelding voor naamkaart selecteren"
+"[english]PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Select Image for Placecard"
 "PlaylistPlayer_WindowTitle"	"Afspeellijstspeler"
 "[english]PlaylistPlayer_WindowTitle"	"Playlist Player"
 "PlaylistPlayer_WindowTitle_WithName"	"Afspeellijstspeler - %1"
@@ -2550,7 +2556,11 @@
 "[english]Settings_Audio_Default"	"Default"
 "Settings_Audio_AudioMirrorEnable"	"Audiospiegeling inschakelen"
 "[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Om door te gaan met bijwerken, dient dit basisstation herstart te worden<br><br><font color=#aaaa00>Verwijder de stroomkabel uit het basisstation en sluit deze daarna opnieuw aan.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
 "BS_PromotePowerManagement_Title"	"SteamVR"
 "[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NIET AANBEVOLEN voor gedeelde ruimtes met meerdere SteamVR-gebruikers.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 }
 }
