--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -1115,9 +1115,9 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Όταν χρησιμοποιείτε SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Ορισμός συσκευής αναπαραγωγής σε"
+"Settings_Audio_AudioPlay"	"Συσκευή εξόδου ήχου"
 "[english]Settings_Audio_AudioPlay"	"Audio output device"
-"Settings_Audio_AudioRecord"	"Ορισμός συσκευής ηχογράφησης σε"
+"Settings_Audio_AudioRecord"	"Συσκευή εισόδου ήχου"
 "[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Όταν δεν χρησιμοποιείτε SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
@@ -2307,7 +2307,7 @@
 "[english]Settings_Advanced_Restart"	"<i>This pending change will take effect once you <a href='vrmonitor://restartsystem'><span style='color:white;'>Restart SteamVR</span></a></i>"
 "BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Δεν εντοπίστηκε δυνατότητα Bluetooth. Απαιτείται μια ενημέρωση συσκευής για να ενεργοποιηθεί αυτή η λειτουργία. Καταδείξτε το εικονίδιο του headset και επιλέξτε Ενημέρωση συσκευής."
 "[english]BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth capability not detected. A device update is needed to enable this feature. Hover over the headset icon and select Update Device."
-"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* ΔΕΝ ΠΡΟΤΕΙΝΕΤΑΙ για κοινούς χώρους ανίχνευσης με πολλούς χρήστες SteamVR..</font>"
+"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* ΔΕΝ ΠΡΟΤΕΙΝΕΤΑΙ για κοινούς χώρους ανίχνευσης με πολλούς χρήστες SteamVR.</font>"
 "[english]BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PowerManagement_ObservedInTracking"	"Παρατηρήθηκε σε προηγούμενη συνεδρία ανίχνευσης."
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
@@ -2571,9 +2571,25 @@
 "[english]Settings_Audio_Device_Other"	"Other"
 "Settings_Audio_Default"	"Προεπιλογή"
 "[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Ενεργοποίηση καθρεπτισμού ήχου"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
 "FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Μια απρόσμενη σύνδεση USB στο σταθμό βάσης αποτρέπει την ολοκλήρωση της ασύρματης ενημέρωσης.<ul><li><font color=#aaaa00>Αποσυνδέστε το καλώδιο τροφοδοσίας του σταθμού βάσης.<li>Αποσυνδέστε το καλώδιο USB που είναι συνδεδεμένο στο σταθμό βάσης.<li>Επανασυνδέστε μόνο το καλώδιο τροφοδοσίας.<li>Περιμένετε 30 δευτερόλεπτα για να ολοκληρώσει ο σταθμός βάσης την εσωτερική του ενημέρωση.</font></ul><br>Το LED του σταθμού βάσης μπορεί να είναι κλειστό κατά την εσωτερική ενημέρωση.<br>Μην αποσυνδέσετε ή κάνετε άλλες συνδέσεις στο σταθμό βάσης κατά την ενημέρωσή του."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
 "FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Αυτός ο σταθμός βάσης χρειάζεται να τερματίσει και να εκκινήσει ξανά για να συνεχίσει η ενημέρωση.<br><br><font color=#aaaa00>Αποσυνδέστε και ξανασυνδέστε το καλώδιο τροφοδοσίας του σταθμού πριν συνεχίσετε.</font>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Αν αυτή η ενημέρωση συσκευής συνεχίζει να αποτυγχάνει χωρίς να σημειώνεται πρόοδος... <ul><li>Τερματίστε το SteamVR.<li>Αποσυνδέστε οποιοδήποτε καλώδιο USB είναι συνδεδεμένο στο σταθμό βάσης.<li>ΜΗΝ συνδέσετε USB στο σταθμό βάσης.<li>Αποσυνδέστε και συνδέστε ξανά το καλώδιο τροφοδοσίας του Link Box.<li>Αποσυνδέστε και συνδέστε ξανά το καλώδιο τροφοδοσίας του σταθμού βάσης.<li>Εκκινήστε το SteamVR και προσπαθήστε ξανά.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Αν αυτή η ενημέρωση συσκευής συνεχίζει να αποτυγχάνει χωρίς να σημειώνεται πρόοδος... <ul><li>Τερματίστε το SteamVR.<li>Αποσυνδέστε οποιοδήποτε καλώδιο USB είναι συνδεδεμένο στο σταθμό βάσης.<li>ΜΗΝ συνδέσετε USB στο σταθμό βάσης.<li>Αποσυνδέστε και συνδέστε ξανά το καλώδιο τροφοδοσίας του σταθμού βάσης.<li>Εκκινήστε το SteamVR και προσπαθήστε ξανά.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"Το SteamVR μπορεί να διαχειριστεί την τροφοδοσία των σταθμών βάσης σας.<br><br>Οι σταθμοί βάσης σε διαχείριση ρεύματος μεταβαίνουν σε λειτουργία αναμονής όταν το SteamVR δε χρησιμοποιείται και αφυπνούν ξανά όταν εκκινεί το SteamVR.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Ενεργοποίηση διαχείρισης ενέργειας σταθμού βάσης *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* ΔΕΝ ΠΡΟΤΕΙΝΕΤΑΙ για κοινούς χώρους ανίχνευσης με πολλούς χρήστες SteamVR.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Έξοδος τώρα (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
