--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -540,7 +540,7 @@
 "[english]CollisionBounds_Beginner"	"Beginner"
 "CollisionBounds_Intermediate"	"ปานกลาง"
 "[english]CollisionBounds_Intermediate"	"Intermediate"
-"CollisionBounds_Squares"	"จตุรัส"
+"CollisionBounds_Squares"	"จัตุรัส"
 "[english]CollisionBounds_Squares"	"Squares"
 "CollisionBounds_Advanced"	"ขั้นสูง"
 "[english]CollisionBounds_Advanced"	"Advanced"
@@ -2583,6 +2583,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 "BS_PromotePowerManagement_Title"	"SteamVR"
 "[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* ไม่แนะนำสำหรับพื้นที่การติดตามตำแหน่งแบบแบ่งปันกันระหว่างผู้ใช้ SteamVR หลายคน</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PromotePowerManagement_ExitNow"	"ออกจากระบบเดี๋ยวนี้ (%1)"
 "[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
