--- a/resources/webinterface/dashboard/localization/bindingui_czech.json
+++ b/resources/webinterface/dashboard/localization/bindingui_czech.json
@@ -175,7 +175,7 @@
   "BindingUI_Save_Public": "Sdílet toto nastavení s dalšími uživateli.",
   "BindingUI_Save_Export": "Uložit nastavení do „Dokumenty/steamvr/input/exports“.",
   "BindingUI_Save_ReplaceDefault": "Přepsat tímto nastavením výchozí nastavení aplikace.",
-  "BindingUI_Save_AddNewDefault": "Tento typ ovladače bude přidán do souboru manifestu.",
+  "BindingUI_Save_AddNewDefault": "Tento typ ovladače bude přidán do záznamového souboru.",
   "BindingUI_EditPageTitle": "Upravujete „%1$s“",
   "BindingUI_ViewPageTitle": "Prohlížíte si „%1$s“",
   "BindingUI_PageSubTitle": "%1$s – %2$s (%3$s)",
@@ -226,14 +226,14 @@
   "BindingUI_SelectAction_Required": "Vyžadováno",
   "BindingUI_SelectAction_Suggested": "Navrženo",
   "SaveError_BindingWriteFailed": "Nepodařilo se zapsat do souboru s nastavením. Není chráněný proti zápisu?",
-  "SaveError_ActionManifestWriteFailed": "Nepodařilo se zapsat do souboru manifestu. Není chráněný proti zápisu?",
+  "SaveError_ActionManifestWriteFailed": "Nepodařilo se zapsat do záznamového souboru. Není chráněný proti zápisu?",
   "AppSelect_Title": "Vlastnosti ovladače",
   "AppSelect_CurrentApp": "Aktuální aplikace",
   "AppSelect_LastRunApp": "Poslední spuštěná aplikace",
   "AppSelect_RecentApp": "Nedávné aplikace",
   "AppSelect_CompositorName": "Hlavní obrazovka režimu SteamVR",
   "AppSelect_CoreSteamVRApps": "Základní aplikace režimu SteamVR",
-  "AppSelect_ControllerTester": "Vyzkoušet ovladač",
+  "AppSelect_ControllerTester": "Otestovat ovladač",
   "AppSelect_LegacyDebug": "Debuggování staršího rozhraní",
   "AppSelect_ShowMoreApps": "Zobrazit další aplikace",
   "AppSelect_EditBindings": "Změnit nastavení ovladače",
@@ -259,7 +259,7 @@
   "input_binding_load_failed_no_url": "Nastavení (%2$s) pro %1$s nebylo určeno. Vyberte ze seznamu jiné nastavení, nebo vytvořte nové.",
   "input_binding_load_below_minimum_version": "Nastavení ovladače %2$s pro aplikaci %1$s bylo vytvořeno pro starší verzi této aplikace. Vaše nastavení bylo změněno zpět na výchozí.",
   "unknown_application": "Neznámá aplikace",
-  "TestController_Title": "Vyzkoušet ovladače",
+  "TestController_Title": "Otestovat ovladače",
   "InputDebugger_Title": "Debugger vstupu",
   "InputDebugger_Actions": "Signály",
   "InputDebugger_Filters": "Filtry",
@@ -271,9 +271,9 @@
   "BindingUI_WindowTitle_ControllerBinding": "Nastavení ovladače",
   "BindingUI_WindowTitle_ManageTrackers": "Spravovat sledovací zařízení",
   "BindingUI_WindowTitle_DisplaySettings": "Nastavení displejů",
-  "ActionManifestError_ManifestParseError": "Soubor manifestu pro %1$s vykazuje problém: „%2$s“",
-  "ActionManifestError_FileNotFound": "Soubor manifestu pro %1$s nebyl nalezen.",
-  "ActionManifestError_JSONParseError": "Soubor manifestu pro %1$s neobsahuje platná data ve formátu JSON.",
+  "ActionManifestError_ManifestParseError": "Záznamový soubor pro %1$s vykazuje problém: „%2$s“",
+  "ActionManifestError_FileNotFound": "Záznamový soubor pro %1$s nebyl nalezen.",
+  "ActionManifestError_JSONParseError": "Záznamový soubor pro %1$s neobsahuje platná data ve formátu JSON.",
   "ActionManifestError_Path": "Cesta k souboru:",
   "TrackerEditor_Title": "Spravovat sledovací zařízení",
   "TrackerEditor_BuzzTracker": "Identifikovat sledovací zařízení",
@@ -311,6 +311,7 @@
   "SecondaryControllerTab": "Dodatečná nastavení",
   "SecondaryController_ReturnWithLeftHand": "Vrátit nastavení pro levou ruku",
   "SecondaryController_ReturnWithRightHand": "Vrátit nastavení pro pravou ruku",
+  "SecondaryController_ReturnWithHead": "Vrátit nastavení pro headset",
   "Settings_ThumbstickDeadzone_Text": "Mrtvá zóna páčky:",
   "Settings_ControllerSettings_Title": "Vlastnosti páčky",
   "Settings_ControllerSettings_Utilities": "Nástroje ovladače",
