--- a/resources/webinterface/dashboard/localization/dashboard_danish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_danish.json
@@ -1,14 +1,14 @@
 {
   "UI_Unknown": "UKENDT",
   "Now_Starting": "NÆSTE",
-  "Now_Starting_HomeApp": "GÅR HJEM TIL",
+  "Now_Starting_HomeApp": "GÅR TILBAGE TIL",
   "Now_Playing": "SPILLER NU",
-  "Now_Playing_HomeApp": "HJEM",
+  "Now_Playing_HomeApp": "STARTSIDE",
   "Now_Quitting": "AFSLUTTER NU",
   "Now_Waiting": "VENTER...",
   "BackToApp": "TILBAGE TIL APP",
   "Camera_Header": "RUMVISNING",
-  "GoHome": "GÅ HJEM",
+  "GoHome": "GÅ TIL STARTSIDE",
   "QuitApp": "AFSLUT APP",
   "DashboardPower_Header": "SYSTEM",
   "BindingCallout_Header": "VIS STYRINGER",
