--- a/resources/webinterface/dashboard/localization/dashboard_german.json
+++ b/resources/webinterface/dashboard/localization/dashboard_german.json
@@ -3,7 +3,7 @@
   "Now_Starting": "ALS NÄCHSTES",
   "Now_Starting_HomeApp": "ZUR HOME-ANWENDUNG",
   "Now_Playing": "WIRD GESPIELT",
-  "Now_Playing_HomeApp": "HOME",
+  "Now_Playing_HomeApp": "STARTSEITE",
   "Now_Quitting": "WIRD BEENDET",
   "Now_Waiting": "WARTEN...",
   "BackToApp": "ZURÜCK ZUR ANWENDUNG",
