--- a/resources/webinterface/dashboard/localization/dashboard_korean.json
+++ b/resources/webinterface/dashboard/localization/dashboard_korean.json
@@ -11,6 +11,6 @@
   "GoHome": "홈으로 이동",
   "QuitApp": "앱 종료",
   "DashboardPower_Header": "시스템",
-  "BindingCallout_Header": "SHOW CONTROLS",
+  "BindingCallout_Header": "컨트롤 표시",
   "MutedLabel": "음성 차단됨"
 }
