--- a/resources/webinterface/dashboard/localization/webhelper_swedish.json
+++ b/resources/webinterface/dashboard/localization/webhelper_swedish.json
@@ -17,6 +17,7 @@
 	"PowerMenuResetSeatedPosition": "Återställ sittande position",
 	"PowerMenuTurnOffController": "Stäng av kontroll",
 	"PowerMenuQuitSceneApp": "Avsluta %1$s",
+	"PowerMenuQuitSceneApp_NoApp": "Exit App",
 	"PowerMenuExitVR": "Avsluta VR",
 	"PowerMenuCancel": "Avbryt",
 	"PowerMenuHeader": "Strömmeny",
