--- a/resources/webinterface/dashboard/localization/webhelper_tchinese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_tchinese.json
@@ -17,6 +17,7 @@
 	"PowerMenuResetSeatedPosition": "重設就座狀態",
 	"PowerMenuTurnOffController": "關閉控制器",
 	"PowerMenuQuitSceneApp": "離開 %1$s",
+	"PowerMenuQuitSceneApp_NoApp": "Exit App",
 	"PowerMenuExitVR": "離開 VR",
 	"PowerMenuCancel": "取消",
 	"PowerMenuHeader": "電源選單",
