--- a/resources/webinterface/dashboard/localization/bindingui_russian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_russian.json
@@ -309,8 +309,9 @@
   "TrackpadClickRight": "Правый трекпад",
   "TrackpadClickNone": "Выбрать трекпад",
   "SecondaryControllerTab": "Дополнительные настройки",
-  "SecondaryController_ReturnWithLeftHand": "Return bindings with left hand",
-  "SecondaryController_ReturnWithRightHand": "Return bindings with right hand",
+  "SecondaryController_ReturnWithLeftHand": "Использовать управление для левой руки",
+  "SecondaryController_ReturnWithRightHand": "Использовать управление для правой руки",
+  "SecondaryController_ReturnWithHead": "Использовать управление для шлема",
   "Settings_ThumbstickDeadzone_Text": "Мёртвая зона стика:",
   "Settings_ControllerSettings_Title": "Настройки стика",
   "Settings_ControllerSettings_Utilities": "Утилиты контроллера",
