--- a/resources/webinterface/dashboard/localization/dashboard_turkish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_turkish.json
@@ -1,8 +1,8 @@
 {
-  "UI_Unknown": "Bilinmiyor",
+  "UI_Unknown": "BİLİNMİYOR",
   "Now_Starting": "SONRAKİ",
   "Now_Starting_HomeApp": "ŞU EVE GİDİLİYOR:",
-  "Now_Playing": "Şimdi çalıyor",
+  "Now_Playing": "ŞİMDİ ÇALIYOR",
   "Now_Playing_HomeApp": "EV",
   "Now_Quitting": "ŞİMDİ ÇIKILIYOR",
   "Now_Waiting": "BEKLENİYOR...",
