--- a/resources/webinterface/dashboard/localization/webhelper_romanian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_romanian.json
@@ -17,6 +17,7 @@
 	"PowerMenuResetSeatedPosition": "Resetează poziția din șezut",
 	"PowerMenuTurnOffController": "Oprește controlerul",
 	"PowerMenuQuitSceneApp": "Ieși din %1$s",
+	"PowerMenuQuitSceneApp_NoApp": "Exit App",
 	"PowerMenuExitVR": "Ieși din RV",
 	"PowerMenuCancel": "Anulează",
 	"PowerMenuHeader": "Meniul de alimentare",
